--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -1,6 +1,12 @@
+@import "./styles.scss";
+
 .header {
-    padding: 20px;
-    background-color: #333333;
+    position: relative;
+    z-index: 10;
+    padding: 15px 20px;
+    box-shadow: 0 1px 3px 0 #0000001a, 0 1px 2px 0 rgb(0 0 0 / 6%);
+    transition: 1s;
+
 
     &__container {
         width: 100%;
@@ -12,12 +18,74 @@
         align-items: center;
     }
 
+    &__left {
+        display: flex;
+        align-items: center;
+    }
+
+    &__right {
+        display: flex;
+        align-items: center;
+    }
+
+    &__input {
+        padding: 5px 8px;
+        border: none;
+        border-radius: 5px;
+
+        &:focus-visible {
+            outline: 0;
+            border: 2px solid $mainSecond;
+        }
+    }
+
     &__logo {
         font-weight: 700;
+        font-size: 24px;
+        color: $main;
+        margin-right: 40px;
+    }
+
+    &__theme {
+        position: relative;
+        width: 60px;
+        height: 30px;
+        border-radius: 20px;
+        cursor: pointer;
+
+        display: flex;
+        align-items: center;
+        transition: 1s;
+
+        &_button {
+            position: absolute;
+            transition: 1s;
+            margin: 0 2px;
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            background-color: $main;
+            transition: 1s;
+        }
+    }
+
+    &__nav {
+        display: flex;
+
+        &_item {
+            color: $mainSecond;
+            font-size: 14px;
+            margin-left: 15px;
+            cursor: pointer;
+
+            &:first-child {
+                margin-left: 0;
+            }
+        }
     }
 
     &__sign {
-        background-color: #66ddf6;
+        background-color: $main;
         padding: 5px 10px;
         border-radius: 5px;
 
@@ -25,10 +93,11 @@
         font-size: 14px;
         font-weight: 700;
 
-        margin-left: 20px;
+        margin-left: 15px;
     }
 
     &__login {
         font-size: 14px;
+        margin-left: 25px;
     }
 }
