--- a/styles/hub.module.scss
+++ b/styles/hub.module.scss
@@ -10,20 +10,59 @@
         min-height: 100vh;
 
         padding-top: 50px;
-        display: flex;
+        // display: flex;
     }
 
     &__filter {
         width: 30%;
-
     }
 
-    &__list {
-        width: 70%;
+    &__demonstrative {
+        display: flex;
+        justify-content: space-between;
+
+        width: 100%;
+        max-width: 1300px;
+        margin: 0 auto;
+
+        &_items {
+            width: 32%;
+            padding: 15px 10px;
+            background-color: #fff;
+            color: rgb(60, 60, 60);
+            border-radius: 5px;
+
+            &_api {
+                width: 100%;
+                color: rgba(250, 235, 215, 0);
+                padding: 5px 10px;
+                display: flex;
+                align-items: center;
+                cursor: pointer;
+            }
+        }
+
+        &_img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+        }
+
+        &_title {
+            margin-left: 10px;
+            font-size: 16px;
+            color: #000;
+        }
+
+        &_index {
+            color: rgb(74, 74, 74);
+            margin-right: 10px;
+        }
     }
 
     &__title {
-        font-size: 24px;
+        font-size: 16px;
+        margin-left: 15px;
 
         &_filter {
             font-size: 14px;
@@ -49,7 +88,7 @@
     }
 
     &__popular {
-        width: 90%;
+        width: 100%;
         height: 180px;
         display: flex;
         justify-content: space-between;
@@ -65,23 +104,6 @@
         }
     }
 
-    &__apis {
-        width: 100%;
-        height: 350px;
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-
-        &_api {
-            display: inline-block;
-            width: 22%;
-            height: 140px;
-            background-color: rgba(32, 138, 225, 0.659);
-            color: rgba(250, 235, 215, 0);
-            border-radius: 5px;
-        }
-    }
-
     &__show {
         border: none;
         border-radius: 5px;
@@ -89,6 +111,6 @@
         // font-weight: 700;
         display: inline-block;
         cursor: pointer;
-        
+
     }
 }
