--- a/styles/service.module.scss
+++ b/styles/service.module.scss
@@ -3,24 +3,79 @@
     transition: 1s;
     overflow: hidden;
 
-    &__container {
-        width: 100%;
-        max-width: 1300px;
-        margin: 0 auto;
-    }
-
     &__background {
         position: absolute;
-        z-index: -1;
+        z-index: -2;
         top: 0;
         left: 0;
         width: 100vw;
         height: calc(100vh - 80px);
+
+        &_dark {
+            position: absolute;
+            z-index: -1;
+            display: block;
+            width: 100vw;
+            height: calc(100vh - 80px);
+            background-color: #000000;
+            opacity: 0.5;
+        }
+    }
+
+    &__container {
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
+    &__inner {
+        position: relative;
+        margin-top: 100px;
+        height: calc(100vh - 180px);
     }
 
     &__title {
-        margin-top: 0;
-        color: rgb(249, 249, 249);
-        height: 100vh;
+        margin: 20px 0;
+    }
+
+    &__description {
+        max-width: 350px;
+    }
+
+    &__logo {
+        width: 70px;
+        height: 70px;
+    }
+
+    &__stars {
+        display: flex;
+        align-items: center;
+        margin-top: 10px;
+        font-size: 18px;
+
+        &_icon {
+            display: inline-block;
+            width: 1em;
+            height: 1em;
+            stroke-width: 0;
+            stroke: currentColor;
+            fill: currentColor;
+            color: rgb(255, 218, 6);
+            margin-left: 2px;
+        }
+
+    }
+
+    &__nav {
+        position: absolute;
+        bottom: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 350px;
+
+        &_item {
+            cursor: pointer;
+        }
     }
 }
