--- a/styles/service/service.module.scss
+++ b/styles/service/service.module.scss
@@ -3,35 +3,35 @@
     transition: 1s;
     overflow: hidden;
 
-    &__background {
-        position: absolute;
-        z-index: -2;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: calc(100vh - 80px);
+    // &__background {
+    //     position: absolute;
+    //     z-index: -2;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100vw;
+    //     height: calc(100vh - 80px);
 
-        &_dark {
-            position: absolute;
-            z-index: -1;
-            display: block;
-            width: 100vw;
-            height: calc(100vh - 80px);
-            background-color: #000000;
-            opacity: 0.5;
-        }
-    }
+    //     &_dark {
+    //         position: absolute;
+    //         z-index: -1;
+    //         display: block;
+    //         width: 100vw;
+    //         height: calc(100vh - 80px);
+    //         background-color: #a91010;
+    //         opacity: 0.5;
+    //     }
+    // }
 
-    &__container {
+    &__container {}
+
+    &__show {
+        height: calc(100vh - 179px);
         width: 100%;
         max-width: 1200px;
         margin: 0 auto;
-    }
 
-    &__inner {
         position: relative;
         margin-top: 100px;
-        height: calc(100vh - 180px);
     }
 
     &__title {
@@ -67,12 +67,20 @@
     }
 
     &__nav {
-        position: absolute;
-        bottom: 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 350px;
+        position: relative;
+        top: -50px;
+        width: 100%;
+        height: 0;
+        max-width: 1200px;
+        margin: 0 auto;
+
+        &_inner {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 350px;
+
+        }
 
         &_item {
             cursor: pointer;
