--- a/styles/service/docs.module.scss
+++ b/styles/service/docs.module.scss
@@ -2,28 +2,32 @@
 
 .endpoints {
     &__docs {
-        padding: 20px;
-        padding-left: 50px;
+        padding: 100px 20px 20px 50px;
+      
         width: 80%;
         height: 100vh;
         overflow: auto;
 
         &::-webkit-scrollbar {
-            width: 15px;
+            width: 10px;
         }
 
         &::-webkit-scrollbar-track {
-            background: $darkSecond;
+            background: #111111;
         }
 
         &::-webkit-scrollbar-thumb {
-            background-color: $mainSecond;
+            background-color: #111111;
             border-radius: 20px;
-            border: 4px solid $darkSecond;
+            border: 3px solid $darkSecond;
 
             &:hover {
                 background-color: $main;
             }
+        }
+
+        &_title {
+            margin-top: 0;
         }
 
         &_item {
@@ -63,7 +67,7 @@
         margin-bottom: 20px;
 
         &_box {
-            margin-top: 50px;
+            margin-top: 30px;
         }
 
         &_item {
