--- a/styles/service/service.module.scss
+++ b/styles/service/service.module.scss
@@ -1,3 +1,5 @@
+@import "../styles.scss";
+
 .service {
     position: relative;
     transition: 1s;
@@ -25,13 +27,70 @@
     &__container {}
 
     &__show {
-        height: calc(100vh - 179px);
+        height: calc(100vh);
         width: 100%;
         max-width: 1200px;
         margin: 0 auto;
+        padding-top: 150px;
 
         position: relative;
-        margin-top: 100px;
+        display: flex;
+    }
+
+    &__cell {
+        width: 50%;
+        margin-left: auto;
+
+        &_title {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        &_box {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        &_item {
+            display: inline-block;
+            width: 50%;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            margin-bottom: 30px;
+
+            &_title {
+                margin: 10px 2px;
+            }
+
+            &_field {
+                background-color: #222;
+                color: rgb(227, 227, 227);
+                width: 200px;
+                height: 40px;
+                border-radius: 5px;
+                border: 1px solid $main;
+
+                -webkit-box-shadow: 0px 0px 4px 0px rgba(0, 213, 255, 0.5);
+                -moz-box-shadow: 0px 0px 4px 0px rgba(0, 213, 255, 0.5);
+                box-shadow: 0px 0px 4px 0px rgba(0, 213, 255, 0.5);
+
+                display: flex;
+                align-items: center;
+                padding: 0 10px;
+            }
+        }
+    }
+
+    &__subscribe {
+        background-color: $main;
+        color: #fff;
+        font-weight: 700;
+        font-size: 14px;
+        padding: 8px 15px;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-top: 10px;
     }
 
     &__title {
