super over mega many changes

--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -1,7 +1,7 @@
 @import "./styles.scss";
 
 .header {
-    position: fixed;
+    position: relative;
     width: 100%;
     z-index: 10;
     padding: 15px 20px;
@@ -9,6 +9,7 @@
     // box-shadow: 0 1px 3px 0 #0000001a, 0 1px 2px 0 rgb(0 0 0 / 6%);
     transition: 1s;
     display: flex;
+    background-color: #111;
 
     &__container {
         width: 100%;
@@ -112,7 +113,9 @@
 
     &__login {
         font-size: 14px;
-        margin-left: 25px;
+        margin-left: 25px    ;    
+        color: #fff;
+
 
         @media screen and (max-width: 900px) {
             margin: 0;
@@ -120,7 +123,7 @@
     }
 
     &__user {
-        margin-left: 20px;
+        margin-left: 30px;
 
         &_avatar {
             width: 45px;
@@ -128,5 +131,30 @@
             border-radius: 50%;
             cursor: pointer;
         }
+    }
+
+    &__create {
+        position: relative;
+        font-size: 20px;
+        margin-left: 30px;
+        color: #fff;
+        cursor: pointer;
+
+        &_message {
+            display: none;
+            position: absolute;
+            left: 20px;
+            white-space: nowrap;
+            padding: 5px;
+            border-radius: 5px;
+            font-size: 12px;
+            background-color: #666666;
+            color: #fff;
+
+        }
+    }
+
+    &__create:hover &__create_message {
+        display: inline-block;
     }
 }
