Over many changes

--- a/styles/service/service.module.scss
+++ b/styles/service/service.module.scss
@@ -27,11 +27,11 @@
     &__container {}
 
     &__show {
-        height: calc(100vh);
         width: 100%;
         max-width: 1200px;
         margin: 0 auto;
-        padding-top: 150px;
+        padding-bottom: 100px;
+        padding-top: 20px;
 
         position: relative;
         display: flex;
