--- a/styles/service/createItems.module.scss
+++ b/styles/service/createItems.module.scss
@@ -1,90 +1,7 @@
 @import "../styles.scss";
 
 .endpoints {
-    border-top: 1px solid #666666;
-    background-color: #111111;
-    color: #fff;
-
-    &__container {
-        display: flex;
-    }
-
     &__menu {
-        position: relative;
-        width: 20%;
-        height: 100vh;
-        padding: 20px;
-        padding-right: 0;
-        border-right: 1px solid #666666;
-
-        &_item {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 3px;
-            border-radius: 5px 0 0 5px;
-            transition: 0.3s;
-            cursor: pointer;
-
-            &:hover {
-                background-color: $dark;
-                transition: 0.3s;
-            }
-
-            &_box {
-                display: flex;
-                align-items: center;                
-            }
-
-            &_group_name {
-                display: inline;
-                color: #eeeeee;
-                border: none;
-                transition: 0.3s;
-                width: 50%;
-
-                &:focus-visible {
-                    outline: 0;
-                }
-            }
-
-            &_redact {
-                background-color: #111111;
-                width: 22px;
-                height: 22px;
-                border-radius: 5px;
-                opacity: 0;
-                cursor: pointer;
-                transition: 0.2s;
-                margin-right: 10px;
-
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                &_icon {
-                    display: inline-block;
-                    width: 13px;
-                    height: 14px;
-                    stroke-width: 0;
-                    stroke: currentColor;
-                    fill: currentColor;
-                    color: #eeeeee;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                }
-            }
-        }
-
-        &_item:hover &_item_redact {
-            opacity: 1;
-            transition: 0.2s;
-
-        }
-
         &_create {
             margin: 10px 0;
             display: flex;
@@ -108,7 +25,6 @@
 
             &_form {
                 padding-right: 20px;
-                // display: flex;
 
                 &_top {
                     display: flex;
@@ -130,6 +46,11 @@
 
                 &:focus-visible {
                     outline: 0;
+                }
+
+                &_code {
+                    width: 70px;
+                    text-align: center;
                 }
             }
 
