--- a/styles/service/docs.module.scss
+++ b/styles/service/docs.module.scss
@@ -2,8 +2,8 @@
 
 .endpoints {
     &__docs {
-        padding: 100px 20px 20px 50px;
-      
+        padding: 50px 20px 20px 50px;
+
         width: 80%;
         height: 100vh;
         overflow: auto;
@@ -28,6 +28,16 @@
 
         &_title {
             margin-top: 0;
+            margin-bottom: 20px;
+            font-size: 34px;
+            font-weight: 700;
+            background-color: #111111;
+            color: #fff;
+            border: none;
+
+            &:focus-visible {
+                outline: 0;
+            }
         }
 
         &_item {
@@ -47,6 +57,7 @@
                     display: flex;
                     align-items: center;
                 }
+
             }
         }
     }
@@ -130,16 +141,36 @@
                 font-size: 13px;
                 opacity: 0.7;
             }
+
+            &_redact {
+                display: inline-block;
+                transition: 0.2s;
+                width: 12px;
+                height: 13px;
+                stroke-width: 0;
+                stroke: currentColor;
+                fill: currentColor;
+                color: #ffffff;
+
+                opacity: 0;
+                margin-left: 5px;
+                cursor: pointer;
+
+            }
+
+            &_title:hover &_redact {
+                opacity: 1;
+            }
         }
     }
 
     &__parameters {
         &_item {
             display: flex;
-            align-items: to-upper-case($string: "");
-            margin-left: 20px;
-            margin-bottom: 8px;
-            padding-bottom: 25px;
+            align-items: center;
+            justify-content: space-between;
+            padding-bottom: 15px;
+            padding-top: 15px;
             border-bottom: 1px solid #666666;
 
             &:last-child {
@@ -148,8 +179,16 @@
                 border-bottom: none;
             }
 
+            &_box {
+                width: 90%;
+                display: flex;
+                align-items: to-upper-case($string: "");
+                margin-left: 20px;
+
+            }
+
             &_field {
-                width: 20%;
+                width: 150px;
 
                 &_name {
                     margin: 0;
@@ -181,6 +220,40 @@
                     }
                 }
             }
+
+            &_redact {
+                background-color: #4a4a4a;
+                width: 30px;
+                height: 30px;
+                border-radius: 5px;
+                opacity: 0;
+                cursor: pointer;
+                transition: 0.2s;
+                margin-right: 20px;
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                &_icon {
+                    display: inline-block;
+                    width: 15px;
+                    height: 17px;
+                    stroke-width: 0;
+                    stroke: currentColor;
+                    fill: currentColor;
+                    color: #eeeeee;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+        }
+
+        &_item:hover &_item_redact {
+            opacity: 1;
+            transition: 0.2s;
+
         }
     }
 }
