--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,4 +1,6 @@
-$main: #00d5ff;
-$mainSecond: #1faee9;
-$dark: #222;
-$darkSecond: #333;
+$main: #6A5ACD;
+$mainSecond: #6A5ACD; 
+$dark: #111111;
+$darkSecond: #222;
+
+$a: #e2e1e1; 
