--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,13 +12,13 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: #111111;
+  background: $dark;
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #111111;
+  background-color: $main;
   border-radius: 20px;
-  border: 3px solid $darkSecond;
+  border: 3px solid $dark;
 
 }
 
