--- a/styles/list.module.scss
+++ b/styles/list.module.scss
@@ -2,7 +2,8 @@
 
 .list {
     min-height: calc(100vh - 62px);
-    padding-top: 120px;
+    padding-top: 50px;
+    transition: 1s;
 
     &__container {
         width: 100%;
@@ -71,13 +72,14 @@
         align-items: center;
         justify-content: space-between;
         padding: 10px 15px;
+        transition: 0.3s;
 
         &_table {
             width: 90%;
             display: flex;
             align-items: center;
         }
-        
+
         &_img {
             min-width: 40px;
             min-height: 40px;
@@ -158,7 +160,7 @@
             flex-wrap: wrap;
 
             &_item {
-                background-color: rgb(171, 241, 114);
+                background-color: $main;
                 color: rgb(29, 30, 27);
                 display: inline-block;
                 border-radius: 5px;
