--- a/styles/service/endpoints.module.scss
+++ b/styles/service/endpoints.module.scss
@@ -180,7 +180,7 @@
         margin-right: 5px;
     }
 
-    &__endpoints {
+    &__items {
         margin-left: 40px;
         margin-bottom: 5px;
 
