--- a/styles/service/price.module.scss
+++ b/styles/service/price.module.scss
@@ -1,44 +1,39 @@
 .price {
-    border-top: 1px solid #666666;
+    min-height: 100vh;
 
     &__container {
         width: 100%;
-        max-width: 1250px;
+        max-width: 900px;
         margin: 0 auto;
     }
 
     &__table {
-        margin: 100px 0;
-        // display: flex;
+        width: 100%;
+        padding: 0px;
         border: 1px solid #666666;
+        border-spacing: 0;
+        border-collapse: separate;
         border-radius: 5px;
+        table-layout: fixed;
 
-        &_item {
-            width: 20%;
-
-            height: 300px;
-        }
+        &_content {}
     }
 
-    &__features {
-        &_plans {
-            width: 20%;
-            border-bottom: 1px solid #666666;
-            border-right: 1px solid #666666;
+    &__row {
+        &_cell {
+            border: 1px solid #666666;
+            border-left: 0;
+            border-bottom: 0;
+            margin: 0;
             padding: 10px;
-        }
 
-        &_feature {
-            width: 100%;
-            border-bottom: 1px solid #666666;
-            padding: 10px;
-        }
-
-        &_item {
-            width: 20%;
-            border-bottom: 1px solid #666666;
-            border-right: 1px solid #666666;
-            padding: 10px;
+            &_first {
+                border: 1px solid #666666;
+                border-left: 0;
+                border-bottom: 0;
+                margin: 0;
+                padding: 10px;
+            }
         }
     }
 }
