--- a/styles/ui/select.module.scss
+++ b/styles/ui/select.module.scss
@@ -1,28 +1,44 @@
 @import "../styles.scss";
 
 .select {
-    margin-bottom: 20px;
     margin-top: 5px;
     position: relative;
     box-sizing: border-box;
+    border-radius: 5px;
 
-    &_variants {
-        display: none;
+    &__variant {
+        &_type {
+            opacity: 1;
+            background-color: #111111;
+            color: #fff;
+            padding: 0px;
+            width: 150px;
+            margin-bottom: 5px;
+            margin-left: 10px;
+        }
+
         &_create {
-            display: none;
+            background-color: #fff;
+            color: #666;
+            padding: 9px 15px;
+            margin-bottom: 20px;
         }
     }
 
     &__item_active {
-        background-color: #fff;
-        padding: 9px;
         border-radius: 5px;
         cursor: pointer;
+
+        &__variant {
+            &_type {}
+
+            &_create {}
+        }
     }
 
     &_items {
         position: absolute;
-        top: 45px;
+        top: 20px;
         left: 0;
         width: 100%;
         height: 200px;
@@ -49,7 +65,7 @@
     &_item {
         padding: 5px 10px;
         background-color: #fff;
-        color: #444444;
+        color: #111111;
         border-top: 1px solid #666666;
         transition: 0.1s;
         cursor: pointer;
@@ -57,6 +73,15 @@
         &:hover {
             background-color: $mainSecond;
             transition: 0.1s
+        }
+
+        &__variant {
+            &_type {
+                background-color: #111111;
+                color: #fff;
+            }
+
+            &_create {}
         }
     }
 }
