--- a/styles/service/docs.module.scss
+++ b/styles/service/docs.module.scss
@@ -40,6 +40,10 @@
             }
         }
 
+        &_method {
+            
+        }
+
         &_item {
             width: 50%;
             padding: 20px;
