--- a/styles/list.module.scss
+++ b/styles/list.module.scss
@@ -25,6 +25,7 @@
     &__apis {
         width: 100%;
         margin-top: 45px;
+        border-radius: 5px 5px 0 0;
 
         -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
         -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
