--- a/styles/ui/select.module.scss
+++ b/styles/ui/select.module.scss
@@ -1,10 +1,8 @@
 @import "../styles.scss";
 
 .select {
-    margin-top: 5px;
     position: relative;
     box-sizing: border-box;
-    border-radius: 5px;
 
     &__variant {
         &_type {
@@ -23,6 +21,19 @@
             padding: 9px 15px;
             margin-bottom: 20px;
         }
+
+        &_method {
+            background-color: #a45858;
+            font-weight: 700;
+            border-radius: 5px;
+            max-width: 75px;
+            padding: 7px 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 30px;
+            cursor: pointer;
+        }
     }
 
     &__item_active {
@@ -33,13 +44,16 @@
             &_type {}
 
             &_create {}
+
+            &_method {
+                text-transform: uppercase;
+
+            }
         }
     }
 
     &_items {
         position: absolute;
-        top: 20px;
-        left: 0;
         width: 100%;
         height: 200px;
         overflow: auto;
@@ -60,6 +74,13 @@
             border-radius: 20px;
             border: 1px solid #666666;
         }
+
+        &__variant {
+            &_method {
+                top: 35px;
+            }
+        }
+
     }
 
     &_item {
@@ -69,6 +90,10 @@
         border-top: 1px solid #666666;
         transition: 0.1s;
         cursor: pointer;
+
+        &:last-child {
+            border-radius: 0 0 5px 5px;
+        }
 
         &:hover {
             background-color: $mainSecond;
@@ -82,6 +107,17 @@
             }
 
             &_create {}
+
+            &_method {
+                text-align: center;
+                font-size: 14px;
+                font-weight: 700;
+                color: #fff;
+                border-top: none;
+                border-top: 1px solid #000000;
+                text-transform: uppercase;
+
+            }
         }
     }
 }
