--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -68,7 +68,28 @@
         align-items: center;
         transition: 1s;
 
+        &::before {
+            content: "☀️";
+            display: block;
+            position: absolute;
+            left: 5px;
+            bottom: 7px;
+            font-size: 15px;
+            line-height: 15px;
+        }
+
+        &::after {
+            content: "🌑";
+            display: block;
+            position: absolute;
+            right: 5px;
+            bottom: 7px;
+            font-size: 15px;
+            line-height: 15px;
+        }
+
         &_button {
+            z-index: 2;
             position: absolute;
             transition: 1s;
             margin: 0 2px;
@@ -77,6 +98,7 @@
             border-radius: 50%;
             background-color: $main;
             transition: 1s;
+
         }
     }
 
@@ -113,7 +135,7 @@
 
     &__login {
         font-size: 14px;
-        margin-left: 25px    ;    
+        margin-left: 25px;
         color: #fff;
 
 
@@ -135,26 +157,9 @@
 
     &__create {
         position: relative;
-        font-size: 20px;
+        font-size: 14px;
         margin-left: 30px;
         color: #fff;
         cursor: pointer;
-
-        &_message {
-            display: none;
-            position: absolute;
-            left: 20px;
-            white-space: nowrap;
-            padding: 5px;
-            border-radius: 5px;
-            font-size: 12px;
-            background-color: #666666;
-            color: #fff;
-
-        }
-    }
-
-    &__create:hover &__create_message {
-        display: inline-block;
     }
 }
